fix: fix create accoutn seller